--- a/PROYECTO2/index.html
+++ b/PROYECTO2/index.html
@@ -59,8 +59,10 @@
         <button>Detalles</button>
       </div>
     </section>
+    <div>
     <footer>
       <p>Powered by Trinty</p>
+    </div>
     </footer>
   </body>
 </html>
