--- a/PROYECTO1/index.html
+++ b/PROYECTO1/index.html
@@ -234,6 +234,6 @@
             <a href="https://www.facebook.com/GestoriaCN/" target="_blank">Facebook</a>
             <a href="https://www.instagram.com/gestoriacn/" target="_blank">Instagram</a>
         </div>
-    </footer>S
+    </footer>
 </body>
 </html>
